--- a/drag_and_drop.html
+++ b/drag_and_drop.html
@@ -38,11 +38,11 @@
     <!-- Elementos arrastrables -->
 	<div style="float:left; padding-top: 3%;width:49vh; height:auto;">
 		<div id="caja1" draggable="true" ondragstart="dragstart(this, event)" ondrag="drag(this, event)" ondragend="dragend(this, event)"> 
-		<span>Cristina Ruiz Palma</span>
+		<span>Cristina abra Viajera</span>
 		</div>
 		
 		 <div id="caja2" draggable="true" ondragstart="dragstart(this, event)" ondrag="drag(this, event)" ondragend="dragend(this, event)"> 
-		 <span>Lorena Vázquez Rodríguez</span>
+		 <span>Lorena pata patata</span>
 		</div>
 		
 		<div id="caja3" draggable="true" ondragstart="dragstart(this, event)" ondrag="drag(this, event)" ondragend="dragend(this, event)"> 
@@ -58,11 +58,11 @@
 		</div>
 		
 		 <div id="caja6" draggable="true" ondragstart="dragstart(this, event)" ondrag="drag(this, event)" ondragend="dragend(this, event)"> 
-		 <span>Blanca Pino Galán</span>
+		 <span>Blanca Stark df</span>
 		</div>
 		
 		<div id="caja7" draggable="true" ondragstart="dragstart(this, event)" ondrag="drag(this, event)" ondragend="dragend(this, event)"> 
-		<span>Cristina Pavón Perez</span>
+		<span>Cristina Rock Star</span>
 		</div>
 		
 		 <div id="caja8" draggable="true" ondragstart="dragstart(this, event)" ondrag="drag(this, event)" ondragend="dragend(this, event)"> 
